# genai-capstone

./: pyproject.toml
