[project]
name = "genai-capstone"
version = "0.1.0"
description = ""
authors = [
    {name = "chris-vanderveen",email = "chrisvanderveen123@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "genai_capstone", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
