[project]
name = "genai-capstone"
version = "0.1.0"
description = "Chatbot interface"
authors = [
    { name = "chris-vanderveen", email = "chrisvanderveen123@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = ["textual (>=3.4.0,<4.0.0)", "textual-dev (>=1.7.0,<2.0.0)", "google-genai (>=1.20.0,<2.0.0)"]

[tool.poetry]
packages = [{ include = "genai_capstone", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
